--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -203,6 +203,8 @@
 
     {% if request.user.userprofile.plotCharts %}
 
+        <div id="plotly_div">This is a div for Plotly</div>
+
         <script src="{{ STATIC_URL }}js/charts/chartFullScreen.js"></script>
         <script src="{{ STATIC_URL }}js/charts/chartSetExportSize.js"></script>
         <script src="{{ STATIC_URL }}js/chroma.min.js"></script>
