Added histograms into the mix. Only now plotting what is asked for (the plotly charts respect the 'series per system' and 'histogram' settings). Pie chart of request frequency only shown if it's selected by the user. There's a problem with using Plotly charts as I'm doing at the moment: python passes the browser a big chunk of html and javascript for each chart. Plotting lots of charts eats up lots of (server) RAM. On my test system I get an out of memory error if I switch on histograms without filtering the data first. It may be that we should be calculating the data for charts in python, and then just passing the required information to a JavaScript Plotly library. Not sure if this will help. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -203,8 +203,6 @@
 
     {% if request.user.userprofile.plotCharts %}
 
-        <div id="plotly_div">This is a div for Plotly</div>
-
         <script src="{{ STATIC_URL }}js/charts/chartFullScreen.js"></script>
         <script src="{{ STATIC_URL }}js/charts/chartSetExportSize.js"></script>
         <script src="{{ STATIC_URL }}js/chroma.min.js"></script>
@@ -824,6 +822,8 @@
         {% endif %}
 
         {% if request.user.userprofile.plotCTRequestMeanDLP %}
+            <div id="boxplot_div">This is a div for a Plotly boxplot</div>
+
             <!-- HTML to include div container for request plot -->
             <div class="panel-group" id="accordion7">
                 <div class="panel panel-default">
@@ -922,6 +922,7 @@
         {% endif %}
 
         {% if request.user.userprofile.plotCTRequestFreq %}
+            <div id="piechart_div">This is a div for a Plotly piechart</div>
             <!-- HTML to include div container for request pie chart -->
             <div class="panel-group" id="accordion8">
                 <div class="panel panel-default">
