--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -89,6 +89,8 @@
                     {{ chartOptionsForm }}
                 </table>
                 <input class="btn btn-default" name="submit" type="submit" />
+                <a href="/openrem/ct/userdefinablecharts/?{{ request.GET.urlencode }}"
+                   class="btn btn-default btn-sm" role="button">User definable charts</a>
             </div>
             <div class="panel-heading">
                 <h3 class="panel-title">Table options</h3>
