--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -104,10 +104,27 @@
     <script src="{{ STATIC_URL }}js/datepicker.js"></script>
     <script src="{{ STATIC_URL }}js/formatDate.js"></script>
 
+    <!-- scriptiog for advanced search -->
+    <script src="{{ STATIC_URL }}js/advancedSearch.js"></script>
+    <script>
+        var staticurl = "{{ STATIC_URL|safe }}";
+        var filterOptionsJSON = {{ json_filter_options|safe }};
+        var searchString = "{{ advancedSearchString|safe }}";
+        $(document).ready(function() {
+            initializeJSON(filterOptionsJSON, staticurl);
+            if (!!(searchString.trim()))
+                createBuilderFromSearchString(searchString);
+            else
+                addSearchBuilderLine(-1, true);
+
+        })
+    </script>
+
+
 {% endblock %}
 
 {% block col1 %}
-                <form action="" method="get" class="form-horizontal" role="form">
+                <form id="advancedSearchMainForm" action="" method="get" class="form-horizontal" role="form" >
                     {% csrf_token %}
                     <div class="panel panel-info" style="display:block">
                         <div class="panel-heading" role="tab" id="headingSearch">
@@ -1147,22 +1164,6 @@
             {% else %}
                 result = chartAverageOverTime('studyMeanDLPOverTimeDIV', 'DLP', 'mGy.cm', 'Median');
             {% endif %}
-            </script>
-
-            <!-- scriptiong for advanced search -->
-            <script src="{{ STATIC_URL }}js/advancedSearch.js"></script>
-            <script>
-                var staticurl = "{{ STATIC_URL|safe }}";
-                var filterOptionsJSON = {{ json_filter_options|safe }};
-                var searchString = "{{ advancedSearchString|safe }}";
-                $(document).ready(function() {
-                    initializeJSON(filterOptionsJSON, staticurl);
-                    if (!!(searchString.trim()))
-                        createBuilderFromSearchString(searchString);
-                    else
-                        addSearchBuilderLine(-1, true);
-
-                })
             </script>
 
         {% endif %}
