--- a/openrem/remapp/templates/remapp/celery_admin.html
+++ b/openrem/remapp/templates/remapp/celery_admin.html
@@ -122,15 +122,27 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
 
-        <h3>Active tasks</h3>
-
-
-        <p id="activetasks">
-          The list of tasks should appear here...
-        </p>
-
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="activeTasksHeading">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" href="#activeTasks" aria-expanded="true"
+                   aria-controls="activeTasks">
+                  Active tasks
+                </a>
+              </h4>
+            </div>
+            <div id="activeTasks" class="panel-collapse collapse in" role="tabpanel"
+                 aria-labelledby="activeTasksHeading">
+              <div class="panel-body">
+
+                <span id="activetasks"></span>
+              </div>
+            </div>
+          </div>
+
+
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="recentTasksHeading">
               <h4 class="panel-title">
