Time-related columns in Celery table now sort correctly. References issue #705

--- a/openrem/remapp/templates/remapp/celery_tasks.html
+++ b/openrem/remapp/templates/remapp/celery_tasks.html
@@ -11,8 +11,8 @@
     <tr>
       <td>{{ task.uuid }}</td>
       <td>{{ task.name }}</td>
-      <td>{{ task.received }}</td>
-      <td>{{ task.started }}</td>
+      <td sorttable_customkey="{{ task.deltaseconds_received }}">{{ task.received }}</td>
+      <td sorttable_customkey="{{ task.deltaseconds_started }}">{{ task.started }}</td>
       <td>{{ task.state }}</td>
       <td>
         {% if task.state == 'STARTED' %}
