--- a/openrem/remapp/templates/remapp/rabbitmq_queues.html
+++ b/openrem/remapp/templates/remapp/rabbitmq_queues.html
@@ -1,175 +1,171 @@
-<div class="panel panel-info">
-  <div class="panel-heading">
-    <h3 class="panel-title">Task processing status</h3>
-  </div>
-  <div class="panel-body">
-    <table class="table table-bordered">
-      <tr>
-        <th style="width: 30%">RabbitMQ</th>
-        <td class="success">
-          <span class="glyphicon glyphicon-ok"></span>
-          Running
-        </td>
-      </tr>
-      <tr>
-        <th>Celery task manager</th>
-        {% if celery_queue %}
-          <td class="success">
-            <span class="glyphicon glyphicon-ok"></span>
-            Running
-            {% else %}
-          <td class="danger">
-          <span class="glyphicon glyphicon-remove"></span>
-          Not running! No tasks will be processed!
-        {% endif %}
-        </td>
-      </tr>
-      <tr>
-        <th>
-          Celery management: Flower
-        </th>
-        {% if flower_status == 200 %}
-          <td class="success">
-            <span class="glyphicon glyphicon-ok"></span>
-            Running
-            {% elif flower_status == 401 %}
-          <td class="danger">
-          <span class="glyphicon glyphicon-remove"></span>
-          Connection error - unauthorised!
-          {% elif flower_status == 500 %}
-          <td class="danger">
-          <span class="glyphicon glyphicon-remove"></span>
-          Not running! Has it been installed and started?
-          {% else %}
-          <td class="danger">
-          <span class="glyphicon glyphicon-remove"></span>
-          Flower status unknown!
-        {% endif %}
-        </td>
-      </tr>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-    </table>
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="taskStatusHeading">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" href="#taskStatus" aria-expanded="true"
+                           aria-controls="taskStatus">
+                            Task processing status
+                        </a>
+                    </h4>
+                </div>
+                <div id="taskStatus" class="panel-collapse collapse in" role="tabpanel"
+                     aria-labelledby="taskStatusHeading">
+                    <div class="panel-body">
 
-  </div>
+                        <table class="table table-bordered">
+                            <tr>
+                                <th style="width: 30%">RabbitMQ</th>
+                                <td class="success">
+                                    <span class="glyphicon glyphicon-ok"></span>
+                                    Running
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Celery task manager</th>
+                                {% if celery_queue %}
+                                    <td class="success">
+                                        <span class="glyphicon glyphicon-ok"></span>
+                                        Running
+                                        {% else %}
+                                    <td class="danger">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                    Not running! No tasks will be processed!
+                                {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>
+                                    Celery management: Flower
+                                </th>
+                                {% if flower_status == 200 %}
+                                    <td class="success">
+                                        <span class="glyphicon glyphicon-ok"></span>
+                                        Running
+                                        {% elif flower_status == 401 %}
+                                    <td class="danger">
+                                        <span class="glyphicon glyphicon-remove"></span>
+                                        Connection error - unauthorised!
+                                        {% elif flower_status == 500 %}
+                                    <td class="danger">
+                                        <span class="glyphicon glyphicon-remove"></span>
+                                        Not running! Has it been installed and started?
+                                        {% else %}
+                                    <td class="danger">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                    Flower status unknown!
+                                {% endif %}
+                                </td>
+                            </tr>
+
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="defaultQueueHeading">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" href="#defaultQueue" aria-expanded="true"
+                           aria-controls="defaultQueue">
+                            Default queue - this is where the OpenREM tasks are processed
+                        </a>
+                    </h4>
+                </div>
+                <div id="defaultQueue" class="panel-collapse collapse in" role="tabpanel"
+                     aria-labelledby="defaultQueueHeading">
+                    <div class="panel-body">
+
+                        <table class="table">
+                            <tr>
+                                <th style="width: 33%">Messages waiting</th>
+                                <th style="width: 33%">Purge or delete queue</th>
+                                <th>Tasks being processed</th>
+                            </tr>
+                            <tr>
+                                <td>{{ default_queue.messages_ready }}</td>
+                                <td>
+                                    {% if default_queue.messages_ready > 0 %}
+                                        <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=default_queue.name %}" role="button">Purge
+                                            queue</a>
+                                    {% elif default_queue.messages == 0 %}
+                                        <a class="btn btn-warning" href="{% url 'rabbitmq_delete' queue=default_queue.name %}" role=button">Delete
+                                            queue</a>
+                                    {% else %}
+                                        <a class="btn btn-default" disabled="disabled">Purge</a>
+                                    {% endif %}
+                                </td>
+                                {% if default_queue.messages_unacknowledged > 0 %}
+                                    <td><b> <a class="btn btn-info" href="{% url 'celery_admin' %}" role="button">
+                                        {{ default_queue.messages_unacknowledged }} task(s) - view in Celery manager</a></b></td>
+                                {% else %}
+                                    <td>{{ default_queue.messages_unacknowledged }}</td>
+                                {% endif %}
+                            </tr>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="otherQueuesHeading">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" href="#otherQueues" aria-expanded="true"
+                           aria-controls="otherQueues">
+                            Other queues
+                        </a>
+                    </h4>
+                </div>
+                <div id="otherQueues" class="panel-collapse collapse in" role="tabpanel"
+                     aria-labelledby="otherQueuesHeading">
+                    <div class="panel-body">
+
+                        <table class="table sortable table-striped" id="rabbitQueueTable">
+                            <tr>
+                                <th id="queue_name" style="width: 40%" onclick="updateSort(this.id, 'user_click');">Queue Name</th>
+                                <th id="num_waiting" style="width: 20%" onclick="updateSort(this.id, 'user_click');">Messages waiting</th>
+                                <th id="purge_or_del" style="width: 20%" onclick="updateSort(this.id, 'user_click');">Purge or delete queue</th>
+                                <th id="num_tasks" onclick="updateSort(this.id, 'user_click');">Tasks being processed</th>
+                            </tr>
+                            {% for queue in other_queues %}
+                                {% if queue.name == "default" %}
+                                    <tr class="success">
+                                        <td><b>{{ queue.name }}</b></td>
+                                        <td><b>{{ queue.messages_ready }}</b></td>
+                                        {% else %}
+                                    <tr>
+                                    <td>{{ queue.name }}</td>
+                                    <td>{{ queue.messages_ready }}</td>
+                                {% endif %}
+                            <td>
+                                {% if queue.messages_ready > 0 %}
+                                    <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=queue.name %}" role="button">Purge queue</a>
+                                {% elif queue.messages == 0 %}
+                                    <a class="btn btn-warning" href="{% url 'rabbitmq_delete' queue=queue.name %}" role=button">Delete queue</a>
+                                {% else %}
+                                    <a class="btn btn-default" disabled="disabled">Purge</a>
+                                {% endif %}
+                            </td>
+                            <td>{{ queue.messages_unacknowledged }}</td>
+                            </tr>
+                            {% endfor %}
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
-
-
-<h4>Default queue - this is where the OpenREM tasks are processed</h4>
-<table class="table">
-  <tr>
-    <th style="width: 33%">Messages waiting</th>
-    <th style="width: 33%">Purge or delete queue</th>
-    <th>Tasks being processed</th>
-  </tr>
-  <tr>
-    <td>{{ default_queue.messages_ready }}</td>
-    <td>
-      {% if default_queue.messages_ready > 0 %}
-        <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=default_queue.name %}" role="button">Purge
-          queue</a>
-      {% elif default_queue.messages == 0 %}
-        <a class="btn btn-warning" href="{% url 'rabbitmq_delete' queue=default_queue.name %}" role=button">Delete
-          queue</a>
-      {% else %}
-        <a class="btn btn-default" disabled="disabled">Purge</a>
-      {% endif %}
-    </td>
-    {% if default_queue.messages_unacknowledged > 0 %}
-      <td><b> <a class="btn btn-info" href="{% url 'celery_admin' %}" role="button">
-        {{ default_queue.messages_unacknowledged }} task(s) - view in Celery manager</a></b></td>
-    {% else %}
-      <td>{{ default_queue.messages_unacknowledged }}</td>
-    {% endif %}
-  </tr>
-</table>
-
-{#<h4>Celery queue</h4>#}
-{#{% if celery_queue %}#}
-{#<table class="table">#}
-{#  <tr>#}
-{#    <th style="width: 33%">Messages waiting</th>#}
-{#    <th style="width: 33%">Purge or delete queue</th>#}
-{#    <th>Tasks being processed</th>#}
-{#  </tr>#}
-{#  <tr>#}
-{#    <td>{{ celery_queue.messages_ready }}</td>#}
-{#    <td>#}
-{#        {% if celery_queue.messages_ready > 0 %}#}
-{#          <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=celery_queue.name %}" role="button">Purge queue</a>#}
-{#        {% elif celery_queue.messages == 0 %}#}
-{#          <a class="btn btn-warning" href="{%  url 'rabbitmq_delete' queue=celery_queue.name %}" role=button">Delete queue</a>#}
-{#        {% else %}#}
-{#          <a class="btn btn-default" disabled="disabled">Purge</a>#}
-{#        {% endif %}#}
-{#    </td>#}
-{#      <td>{{ celery_queue.messages_unacknowledged }}</td>#}
-{#  </tr>#}
-{#</table>#}
-{#{% else %}#}
-{#<p>Celery is not running! No tasks will be processed!</p>#}
-{#{% endif %}#}
-{##}
-{#<h4>Flower queues</h4>#}
-{#{% if flower_queues %}#}
-{#  <table class="table table-striped">#}
-{#    <tr>#}
-{#      <th style="width: 40%">Queue name</th>#}
-{#      <th style="width: 20%">Messages waiting</th>#}
-{#      <th style="width: 20%">Purge or delete queue</th>#}
-{#      <th>Tasks being processed</th>#}
-{#    </tr>#}
-{#  {% for queue in flower_queues %}#}
-{#    <tr>#}
-{#      <td>{{ queue.name }}</td>#}
-{#      <td>{{ queue.messages_ready }}</td>#}
-{#      <td>#}
-{#          {% if queue.messages_ready > 0 %}#}
-{#            <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=queue.name %}" role="button">Purge queue</a>#}
-{#          {% elif queue.messages == 0 %}#}
-{#            <a class="btn btn-warning" href="{%  url 'rabbitmq_delete' queue=queue.name %}" role=button">Delete queue</a>#}
-{#          {% else %}#}
-{#            <a class="btn btn-default" disabled="disabled">Purge</a>#}
-{#          {% endif %}#}
-{#      </td>#}
-{#      <td>{{ queue.messages_unacknowledged }}</td>#}
-{#    </tr>#}
-{#  {% endfor %}#}
-{#  </table>#}
-{#{% else %}#}
-{#<p>There are no Flower queues - has it been installed and started?</p>#}
-{#{% endif %}#}
-
-<h4>Other queues</h4>
-<table class="table sortable table-striped" id="rabbitQueueTable">
-  <tr>
-    <th id="queue_name" style="width: 40%" onclick="updateSort(this.id, 'user_click');">Queue Name</th>
-    <th id="num_waiting" style="width: 20%" onclick="updateSort(this.id, 'user_click');">Messages waiting</th>
-    <th id="purge_or_del" style="width: 20%" onclick="updateSort(this.id, 'user_click');">Purge or delete queue</th>
-    <th id="num_tasks" onclick="updateSort(this.id, 'user_click');">Tasks being processed</th>
-  </tr>
-  {% for queue in other_queues %}
-    {% if queue.name == "default" %}
-      <tr class="success">
-        <td><b>{{ queue.name }}</b></td>
-        <td><b>{{ queue.messages_ready }}</b></td>
-        {% else %}
-      <tr>
-      <td>{{ queue.name }}</td>
-      <td>{{ queue.messages_ready }}</td>
-    {% endif %}
-  <td>
-    {% if queue.messages_ready > 0 %}
-      <a class="btn btn-danger" href="{% url 'rabbitmq_purge' queue=queue.name %}" role="button">Purge queue</a>
-    {% elif queue.messages == 0 %}
-      <a class="btn btn-warning" href="{% url 'rabbitmq_delete' queue=queue.name %}" role=button">Delete queue</a>
-    {% else %}
-      <a class="btn btn-default" disabled="disabled">Purge</a>
-    {% endif %}
-  </td>
-  <td>{{ queue.messages_unacknowledged }}</td>
-  </tr>
-  {% endfor %}
-</table>
 
 <script>
     $(document).ready(function () {
