Changed div class for Celery and Rabbit table sections to make them bolder. Changes to style only, so [skip ci]. References issue #705

--- a/openrem/remapp/templates/remapp/celery_admin.html
+++ b/openrem/remapp/templates/remapp/celery_admin.html
@@ -139,7 +139,7 @@
       <div class="col-md-8 col-md-offset-2">
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading" role="tab" id="activeTasksHeading">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" href="#activeTasks" aria-expanded="true"
@@ -158,8 +158,9 @@
           </div>
 
           <br>
+          <br>
 
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading" role="tab" id="recentTasksHeading">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" href="#recentTasks" aria-expanded="true"
@@ -178,8 +179,9 @@
           </div>
 
           <br>
+          <br>
 
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading" role="tab" id="olderTasksHeading">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" href="#olderTasks" aria-expanded="true"
