--- a/openrem/remapp/templates/remapp/rabbitmq_queues.html
+++ b/openrem/remapp/templates/remapp/rabbitmq_queues.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading" role="tab" id="taskStatusHeading">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" href="#taskStatus" aria-expanded="true"
@@ -67,8 +67,9 @@
             </div>
 
             <br>
+            <br>
 
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading" role="tab" id="defaultQueueHeading">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" href="#defaultQueue" aria-expanded="true"
@@ -114,8 +115,9 @@
             </div>
 
             <br>
+            <br>
 
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading" role="tab" id="otherQueuesHeading">
                     <h4 class="panel-title">
                         <a role="button" data-toggle="collapse" href="#otherQueues" aria-expanded="true"
