--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -141,8 +141,6 @@
         </tr>
         {% for exam in study_list %}
           {% with equipment=exam.generalequipmentmoduleattr_set.get %}
-          {% with projection_set=exam.projectionxrayradiationdose_set.get %}
-          {% with accum_set=projection_set.accumxraydose_set.all %}
           {% with n_delta_studies=exam.pksforsummedrfdosestudiesindeltaweeks_set.all.count %}
         <tr>
             <td>
@@ -228,34 +226,27 @@
                 </a>
             </td>
             {% if alertLevels.show_accum_dose_over_delta_weeks %}
-                {% with accum_set|first as first_accum_set %}
                     <td>
                         <a href="{% url 'rf_detail_view' pk=exam.id %}">
-                          {% with accum_integrated=first_accum_set.accumintegratedprojradiogdose_set.get %}
-                            {% if accum_integrated.total_dap_delta_gym2_to_cgycm2 >= alertLevels.alert_total_dap_rf %}
-                                <strong style="color: red;">{{ accum_integrated.total_dap_delta_gym2_to_cgycm2|floatformat:1 }}</strong>
+                            {% if exam.dap_delta_weeks_cgycm2 >= alertLevels.alert_total_dap_rf %}
+                                <strong style="color: red;">{{ exam.dap_delta_weeks_cgycm2|floatformat:1 }}</strong>
                             {% else %}
-                                {{ accum_integrated.total_dap_delta_gym2_to_cgycm2|floatformat:1 }}
+                                {{ exam.dap_delta_weeks_cgycm2|floatformat:1 }}
                             {% endif %}
 
                              ({{ n_delta_studies }} exam{{ n_delta_studies|pluralize }})
-                          {% endwith %}
                         </a>
                     </td>
                     <td>
                         <a href="{% url 'rf_detail_view' pk=exam.id %}">
-                          {% with accum_integrated=first_accum_set.accumintegratedprojradiogdose_set.get %}
-                            {% if accum_integrated.dose_rp_total_over_delta_weeks >= alertLevels.alert_total_rp_dose_rf %}
-                                <strong style="color: red;">{{ accum_integrated.dose_rp_total_over_delta_weeks | sigdig }}</strong>
+                            {% if exam.total_rp_dose_delta_weeks >= alertLevels.alert_total_rp_dose_rf %}
+                                <strong style="color: red;">{{ exam.total_rp_dose_delta_weeks | sigdig }}</strong>
                             {% else %}
-                                {{ accum_integrated.dose_rp_total_over_delta_weeks | sigdig }}
+                                {{ exam.total_rp_dose_delta_weeks | sigdig }}
                             {% endif %}
-
-                             ({{ n_delta_studies }} exam{{ n_delta_studies|pluralize }})
-                          {% endwith %}
+                            ({{ n_delta_studies }} exam{{ n_delta_studies|pluralize }})
                         </a>
                     </td>
-                {% endwith %}
             {% endif %}
             <td>
                 <a href="{% url 'rf_detail_view' pk=exam.id %}">
@@ -268,7 +259,7 @@
             </td>
             {% endif %}
         </tr>
-          {% endwith %}{% endwith %}{% endwith %}{% endwith %}
+          {% endwith %}{% endwith %}
         {% endfor %}
     </table>
 
