--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -150,8 +150,6 @@
     </row>
     {% for exam in study_list %}
       {% with equipment=exam.generalequipmentmoduleattr_set.get %}
-        {% with projection_set=exam.projectionxrayradiationdose_set.get %}
-          {% with accum_set=projection_set.accumxraydose_set.all %}
             <tr>
               <td>
                 <a href="{% url 'dx_detail_view' pk=exam.id %}">
@@ -200,34 +198,22 @@
               </td>
               <td>
                 <a href="{% url 'dx_detail_view' pk=exam.id %}">
-                  {% for record in accum_set %}
-                    {% with accum_integrated=record.accumintegratedprojradiogdose_set.get %}
-                      {% if accum_set.count > 1 %}
-                        {{ record.acquisition_plane }}:
-                      {% endif %}
-
-                      {% if accum_integrated.total_number_of_radiographic_frames %}
-                        {{ accum_integrated.total_number_of_radiographic_frames }}
-                      {% else %}
-                        {{ projection_set.irradeventxraydata_set.all.count }}
-                      {% endif %}
-                      <br>
-                    {% endwith %}
-                  {% endfor %}
+                {% if exam.number_of_planes == 2 %}
+                    A: {{ exam.number_of_events_a }}<br>
+                    B: {{ exam.number_of_events_b }}
+                {% else %}
+                    {{ exam.number_of_events_a }}
+                {% endif %}
                 </a>
               </td>
               <td>
                 <a href="{% url 'dx_detail_view' pk=exam.id %}">
-                  {% for record in accum_set %}
-                    {% with accum_integrated=record.accumintegratedprojradiogdose_set.get %}
-                      {% if accum_set.count > 1 %}
-                        {{ record.acquisition_plane }}:
-                      {% endif %}
-
-                      {{ accum_integrated.convert_gym2_to_cgycm2 | floatformat:1 }}
-                      <br>
-                    {% endwith %}
-                  {% endfor %}
+                {% if exam.number_of_planes == 2 %}
+                    A: {{ exam.dap_a_cgycm2 | floatformat:1 }}<br>
+                    B: {{ exam.dap_b_cgycm2 | floatformat:1 }}
+                {% else %}
+                    {{ exam.dap_a_cgycm2 | floatformat:1 }}
+                {% endif %}
                 </a>
               </td>
               {% if admin.admingroup %}
@@ -236,7 +222,7 @@
                 </td>
               {% endif %}
             </tr>
-          {% endwith %}{% endwith %}{% endwith %}
+          {% endwith %}
     {% endfor %}
   </table>
 
